# nobodywho

./: .gitignore  .gitmodules  .pre-commit-config.yaml  404.html  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LIMIT2_PLAN.md  Package.swift  README.md  SECURITY.md  flake.nix  index.html  jitpack.yml  justfile  main.py  mkdocs.yml  pyproject.toml  setup.sh  sitemap.xml  test_async_tools.py  wasm-bindgen-cli-emscripten.patch
nobodywho/: .gitignore  Cargo.nix  Cargo.toml  android.nix  crate-hashes.json  default.nix  models.nix  nobodywho.gdextension  shell.nix  tts.md  workspace.nix
nobodywho/.cargo/: config.toml
nobodywho/android/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
nobodywho/android-tts-app/: build_and_install.sh
nobodywho/android-tts-smoke/: run_on_emulator.sh
nobodywho/android/bindgen/: Cargo.toml
nobodywho/android/example/: build.gradle.kts
nobodywho/android/scripts/: build_aar.sh  generate_bindings.sh
nobodywho/benchmark/: Cargo.toml
nobodywho/benchmark/src/: main.rs
nobodywho/core/: CHANGES.md  Cargo.toml  build.rs  default.nix  shell.nix  uniffi.toml
nobodywho/core/benches/: inference.rs
nobodywho/core/examples/: chatterbox.rs  kokoro.rs  piper.rs  roest.rs  speaker.json  tts_demo.rs
nobodywho/core/src/: actor.rs  chat.rs  chat_state.rs  chatworker.rs  crossencoder.rs  devices.rs  embed.rs  embedder.rs  encoder.rs  errors.rs  host_memory.rs  huggingface.rs  inference.rs  lib.rs  llm.rs  llmactor.rs  memory.rs  model_selection.rs  nobodywho.udl  onnx.rs  platform.rs  profiling.rs  prompt.rs  rerank.rs  sampler.rs  sampler_config.rs  speech_to_text.rs  stream.rs  template.rs  test_threads.rs  tokenizer.rs  toolchat.rs  translate.rs  tts.rs  uniffi_api.rs
nobodywho/dart/example_app/: shell.nix
nobodywho/dart/flutter_bridge/: Cargo.toml  build.rs
nobodywho/dart/flutter_plugin/: flutter_rust_bridge.yaml
nobodywho/docs/: book.toml
nobodywho/docs/src/: SUMMARY.md  getting_started.md  install.md
nobodywho/evals/: pyproject.toml  run_ifeval.py
nobodywho/evals/eval_results/: results_LFM2-700M-F16.csv  results_LFM2-700M-Q4_0.csv  results_LFM2-700M-Q4_K_M-hip-optimized.csv  results_LFM2-700M-Q4_K_M.csv  results_LFM2-700M-Q5_K_M.csv  results_LFM2-700M-Q6_K.csv  results_LFM2-700M-Q8_0.csv  results_LFM2.5-VL-1.6B-BF16.csv  results_LFM2.5-VL-1.6B-F16.csv  results_LFM2.5-VL-1.6B-Q4_0.csv  results_LFM2.5-VL-1.6B-Q8_0.csv  results_Qwen3-4B-Instruct-2507-F16.csv  results_Qwen3-4B-Instruct-2507-IQ4_NL.csv  results_Qwen3-4B-Instruct-2507-IQ4_XS.csv  results_Qwen3-4B-Instruct-2507-Q2_K.csv  results_Qwen3-4B-Instruct-2507-Q2_K_L.csv  results_Qwen3-4B-Instruct-2507-Q3_K_M.csv  results_Qwen3-4B-Instruct-2507-Q3_K_S.csv  results_Qwen3-4B-Instruct-2507-Q4_0.csv  results_Qwen3-4B-Instruct-2507-Q4_1.csv  results_Qwen3-4B-Instruct-2507-Q4_K_M.csv  results_Qwen3-4B-Instruct-2507-Q4_K_S.csv  results_Qwen3-4B-Instruct-2507-Q5_K_M.csv  results_Qwen3-4B-Instruct-2507-Q5_K_S.csv  results_Qwen3-4B-Instruct-2507-Q6_K.csv  results_Qwen3-4B-Instruct-2507-Q8_0.csv  results_Qwen3-4B-Instruct-2507-UD-IQ2_M.csv  results_Qwen3-4B-Instruct-2507-UD-IQ3_XXS.csv  results_Qwen3-4B-Instruct-2507-UD-Q2_K_XL.csv  results_Qwen3-4B-Instruct-2507-UD-Q3_K_XL.csv  results_Qwen3-4B-Instruct-2507-UD-Q4_K_XL.csv  results_Qwen3-4B-Instruct-2507-UD-Q5_K_XL.csv  results_Qwen3-4B-Instruct-2507-UD-Q6_K_XL.csv  results_Qwen3-4B-Instruct-2507-UD-Q8_K_XL.csv  results_Qwen_Qwen3-0.6B-Q5_K_M.csv  results_Qwen_Qwen3-0.6B-Q5_K_M_thinking.csv  results_Qwen_Qwen3-1.7B-Q5_K_M.csv  results_Qwen_Qwen3-1.7B-Q5_K_M_thinking.csv  results_Qwen_Qwen3-4B-Instruct-2507-Q4_K_L.csv  results_Qwen_Qwen3-4B-Instruct-2507-Q4_K_M.csv  (+111 more)
nobodywho/evals/ifeval/: pyproject.toml  run_ifeval.py
nobodywho/evals/lm_eval_scripts/: README.md  cli.py  eval.py  main.py  migrate_csv.py  mlflow_ui.sh  pyproject.toml  results.txt  results_LFM2-700M-F16.csv  results_LFM2-700M-Q6_K.csv  results_LFM2.5-VL-1.6B-BF16.csv  results_LFM2.5-VL-1.6B-F16.csv  results_LFM2.5-VL-1.6B-Q4_0.csv  run_all_models.sh  run_evals.sh
nobodywho/evals/plotting/: plot_bars.py  plot_benchmarks.py  plot_compare.py  plot_variance.py
nobodywho/flutter/: README.md
nobodywho/flutter/example_app/: .flutter-plugins-dependencies  .gitignore  default.nix  pubspec.yaml
nobodywho/flutter/flutter_plugin/: pubspec.yaml
nobodywho/flutter/nobodywho/: .gitignore  (+4 more)
nobodywho/flutter_bridge/: Cargo.toml
nobodywho/flutter_plugin/: flutter_rust_bridge.yaml  pubspec.yaml
nobodywho/gbnf-macro/: Cargo.toml  shell.nix
nobodywho/godot/: Cargo.toml  default.nix  nobodywho.gdextension
nobodywho/grammar/: Cargo.toml
nobodywho/js/: .gitignore  Cargo.toml  README.md  build.rs  package.json.tpl
nobodywho/kotlin/: .gitignore  BUILD_SETUP.md  DEVELOPMENT.md  build.gradle.kts  settings.gradle.kts
nobodywho/napi/: Cargo.toml  DEVELOPMENT.md  README.md  index.d.ts  index.js  package-lock.json  package.json  test.mjs  test_spike.mjs  tsconfig.json
nobodywho/python/: Cargo.toml  PYPI_DESCRIPTION.md  README.md  build_debug_ci.sh  default.nix  demo.py  nobodywho.pyi  pyproject.toml  small_model_test.py  test_reliability.ps1
nobodywho/react-native/: DEVELOPMENT.md  Nobodywho.podspec  NobodywhoReactNative.podspec  README.md  jest.config.js  package-lock.json  package.json  ubrn.config.yaml
nobodywho/rust/: Cargo.toml  README.md
nobodywho/scripts/: apple-dlopen-smoke.c  disable-llama-openssl.cmake  inject-native-loader.py  lipo-apple-libs.sh  llama-build-overrides.cmake  make-apple-framework.sh  stage-elf-libs.sh  unversion-elf-libs.sh
nobodywho/src/: chat_state.rs  lib.rs  llm.rs  sampler_config.rs  sampler_resource.rs
nobodywho/stt/: Cargo.toml  build.rs  exported_symbols.txt  symbols.map
nobodywho/swift/: .gitignore  DEVELOPMENT.md  Package.swift  README.md
nobodywho/uniffi/: Cargo.toml  WRAPPERSTRATEGY.md  build.rs
nobodywho/unity/: .gitignore  .template.env  Cargo.toml  README.md  default.nix  justfile
nobodywho/wasm/: .gitignore  Cargo.toml  README.md  package.json.tpl
who2/godot/: Cargo.toml
(+938 files in other folders)
