[workspace]
members = [
    "core",
    "godot",
    "flutter/rust",
    "python",
    "grammar/gbnf",
    "grammar/gbnf-macro",
    "uniffi",
    "js",
]

# edition = "2021" implies resolver = "2".
resolver = "2"

# Patched to git main because pyo3-introspection's support for including docstrings
# in generated type stubs (PR #5782) landed on main but hasn't been released yet.
# Remove this once pyo3 0.29 (or whichever release includes it) is published.
[patch.crates-io]
pyo3 = { git = "https://github.com/PyO3/pyo3", branch = "main" }
pyo3-ffi = { git = "https://github.com/PyO3/pyo3", branch = "main" }
pyo3-macros = { git = "https://github.com/PyO3/pyo3", branch = "main" }
pyo3-macros-backend = { git = "https://github.com/PyO3/pyo3", branch = "main" }
pyo3-build-config = { git = "https://github.com/PyO3/pyo3", branch = "main" }
pyo3-introspection = { git = "https://github.com/PyO3/pyo3", branch = "main" }
# wasm-bindgen pinned to nobodywho-ooo/wasm-bindgen branch
# `wasm-emscripten-0.2.122`: stock upstream 0.2.122 (which absorbed our
# descriptor-interpreter tolerance + the `__wasm_bindgen_emscripten_marker`
# / library_bindgen.js Emscripten output mode) plus the one remaining fix —
# skip wasm-bindgen's `__heap_base`-based thread transform under Emscripten
# (Emscripten manages its own pthread runtime). The whole family is pinned to
# the same branch: 0.2.122 isn't on crates.io yet and js-sys/web-sys/futures
# exact-pin `=0.2.122`. Drop once the pthread fix lands upstream.
#
# wasm64 bring-up: pinned to the fork's `wasm64-emscripten` branch (=
# `wasm-emscripten-0.2.122` + two wasm64 fixes — js-sys's multithreaded-futures
# waker hardcoded `core::arch::wasm32`, absent on wasm64; and cli-support
# memory64 stack-pointer/retptr handling). Restore the `wasm-emscripten-0.2.122`
# pin once those merge there (or upstream).
wasm-bindgen = { git = "https://github.com/nobodywho-ooo/wasm-bindgen", branch = "wasm64-emscripten" }
wasm-bindgen-futures = { git = "https://github.com/nobodywho-ooo/wasm-bindgen", branch = "wasm64-emscripten" }
js-sys = { git = "https://github.com/nobodywho-ooo/wasm-bindgen", branch = "wasm64-emscripten" }
web-sys = { git = "https://github.com/nobodywho-ooo/wasm-bindgen", branch = "wasm64-emscripten" }

# No app-side libc [patch] here. The wasm64 pthread-size fix
# (rust-lang/libc#5156 — merged upstream 2026-06-14, not yet in a released
# libc) is needed only by STD's libc: std's `Thread::new`
# overruns `pthread_attr_t` (44 vs 88 bytes on wasm64) and `std::thread::spawn`
# fails. `-Zbuild-std` resolves the sysroot's libc separately from this
# workspace, so the fix is injected into the nightly's rust-src
# `library/Cargo.toml` instead — a one-time local-dev step (see js/README.md →
# Outstanding), kept until a nightly's std bumps to a libc that includes #5156.
# The app's own libc use is just `getuid()`, unaffected by the change; a path
# patch here would only break CI (no such checkout) for no benefit.

# (No llama-cpp [patch] here: llama-cpp-2 / llama-cpp-sys-2 are pinned directly
# in `core/Cargo.toml` to the fork's `wasm64-emscripten` branch. Patching a git
# source to the same repo's other branch isn't allowed by cargo ("patch must
# point to a different source"), so the branch is bumped at the declaration
# instead. That branch = `wasm-emscripten` + build.rs wasm64 recognition
# (`-sMEMORY64=1` / `LLAMA_WASM_MEM64=ON`, gated on `is_wasm64_emscripten()`, so
# native/wasm32 are byte-for-byte unchanged). Restore `wasm-emscripten` once the
# wasm64 build.rs changes merge there.)
