[package]
name = "nobodywho"
version = "2.2.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.34"
thiserror = "2.0.3"
miette = { version = "5", features = ["fancy"] }
minijinja = { version = "2.11.0", features = ["builtins", "json", "loader"] }
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.39"
llama-cpp-2 = { git = "https://github.com/nobodywho-ooo/llama-cpp-rs", branch = "wasm-emscripten", default-features = false, features = [
    "openmp",
    "android-static-stdcxx",
    "mtmd",
    "llguidance",
] }
llama-cpp-sys-2 = { git = "https://github.com/nobodywho-ooo/llama-cpp-rs", branch = "wasm-emscripten", default-features = false }
lazy_static = "1.5.0"
tokio-stream = "0.1.17"
# No `rt-multi-thread` (which main lists): it `compile_error`s on wasm.
tokio = { version = "1.43.0", features = ["sync", "rt", "macros"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
regex = "1.11.1"
serde_json = "1.0.140"
gbnf = { path = "../grammar/gbnf" }
gbnf-macro = { path = "../grammar/gbnf-macro" }
nom = "8.0.0"
rand = "0.9.3"
futures = "0.3.31"
ahash = "0.8.12"
indexmap = "2.13.0"

# Native-only deps:
# - `ureq` does raw TCP/TLS; not available in a browser sandbox. wasm32 fetches
#   model bytes on the JS side via `fetch` and hands them to a future
#   `Model::load_bytes` API instead.
# - `indicatif` renders terminal progress bars. No terminal in a browser.
# - `monty` (Python interpreter) and `bashkit` (virtual bash) back the
#   `Tool::python` and `Tool::bash` built-in tools. Both have native-only
#   dependencies (monty has no wasm32 target; bashkit forces `tokio/full`
#   which pulls `mio` + raw sockets).
[target.'cfg(not(target_family = "wasm"))'.dependencies]
ureq = { version = "3", features = ["rustls"] }
indicatif = "0.18"
monty = { git = "https://github.com/pydantic/monty", tag = "v0.0.7" }
bashkit = { git = "https://github.com/everruns/bashkit", tag = "v0.1.10" }
# `walkdir` backs `get_cached_models` (cache-dir enumeration) — native-only,
# alongside the rest of the model-loader infra.
walkdir = "2.5"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"

# `dirs` resolves OS-standard cache/config paths. Neither Android nor wasm32
# fits that model: Android reads /proc/self/cmdline directly (see llm.rs),
# wasm32 has no filesystem at all.
[target.'cfg(all(not(target_os = "android"), not(target_family = "wasm")))'.dependencies]
dirs = "6"

# Enable Vulkan for x86_64, x86, and aarch64 targets (excluding Apple platforms and Android).
# Apple platforms use Metal, which is auto-enabled by llama-cpp-rs for all Apple targets
# (except watchOS which has no Metal support — handled in llama-cpp-rs build.rs).
[target.'cfg(all(not(target_os = "macos"), not(target_os = "ios"), not(target_os = "visionos"), not(target_os = "watchos"), not(target_os = "android"), any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
llama-cpp-2 = { git = "https://github.com/nobodywho-ooo/llama-cpp-rs", branch = "wasm-emscripten", default-features = false, features = [
    "openmp",
    "vulkan",
    "mtmd",
    "android-static-stdcxx",
    "llguidance",
] }
