[package]
name = "nobodywho"
version = "2.3.0"
edition = "2021"

[dependencies]
encoding_rs = "0.8.34"
thiserror = "2.0.3"
miette = { version = "5", features = ["fancy"] }
minijinja = { version = "2.11.0", features = ["builtins", "json", "loader"] }
minijinja-contrib = { version = "2.11.0", features = ["pycompat"] }
monty = { git = "https://github.com/pydantic/monty", tag = "v0.0.7" }
bashkit = { git = "https://github.com/everruns/bashkit", tag = "v0.1.10" }
serde = { version = "1.0.215", features = ["derive"] }
chrono = "0.4.39"

llama-cpp-2 = { version = "0.1.150", default-features = false, features = [
    "openmp",
    "mtmd",
    "llguidance",
    "common",
] }
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = [
    "sync",
    "rt",
    "rt-multi-thread",
    "macros",
] }
tokio-stream = "0.1.17"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
regex = "1.11.1"
serde_json = "1.0.140"
gbnf = { path = "../grammar/gbnf" }
gbnf-macro = { path = "../grammar/gbnf-macro" }
nom = "8.0.0"
rand = "0.9.3"
futures = "0.3.31"
ahash = "0.8.12"
indexmap = "2.13.0"
ureq = { version = "3", features = ["rustls"] }
indicatif = "0.18"
walkdir = "2.5"

[target.'cfg(target_os = "android")'.dependencies]
libc = "0.2"
# Statically link the C++ stdlib (libc++) on Android so the produced shared
# library is self-contained. This is Android-only on purpose: on Linux, the
# `static-stdcxx` feature makes llama-cpp-rs's build.rs add the compiler's
# static-archive dir (`emit_compiler_static_archive_search_path`) to the link
# search path, which then resolves `-lgomp` to the non-PIC `libgomp.a` and
# breaks linking the cdylib ("relocation R_X86_64_TPOFF32 against hidden symbol
# `gomp_tls_data`"). Desktop keeps the dynamic libstdc++ it has always used.
llama-cpp-2 = { version = "0.1.150", default-features = false, features = [
    "android-static-stdcxx",
] }

[target.'cfg(not(target_os = "android"))'.dependencies]
dirs = "6"

# Enable Vulkan for x86_64, x86, and aarch64 targets (excluding Apple platforms and Android).
# Apple platforms use Metal, which is auto-enabled by llama-cpp-rs for all Apple targets
# (except watchOS which has no Metal support — handled in llama-cpp-rs build.rs).
[target.'cfg(all(not(target_os = "macos"), not(target_os = "ios"), not(target_os = "visionos"), not(target_os = "watchos"), not(target_os = "android"), any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
llama-cpp-2 = { version = "0.1.150", default-features = false, features = [
    "openmp",
    "vulkan",
    "mtmd",
    "llguidance",
    "common",
] }
