[package]
name = "nobodywho-godot"
version = "5.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
nobodywho = { path = "../core" }
godot = { git = "https://github.com/godot-rust/gdext.git", branch = "master", features = [ "register-docs", "experimental-threads" ] }
tokio = "1.44.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
