[package]
name = "nobodywho-godot"
version = "5.3.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
nobodywho = { path = "../core" }
godot = { version = "0.3.4", features = [ "register-docs", "experimental-threads" ] }
tokio = "1.44.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
serde_json = { version = "1.0.140", features = [ "preserve_order" ] }
