[package]
name = "nobodywho-js"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib" is necessary for wasm-pack to produce a .wasm artifact.
# "rlib" lets `cargo check`/`cargo test` work on native targets so the workspace
# stays buildable without the wasm toolchain installed.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# `mtmd` stays in the default features even on wasm32-unknown-emscripten.
# Core's mtmd code paths are cfg-gated so they compile out, but the C-side
# `mtmd_*` symbols remain wasm imports (resolved by Emscripten's runtime
# at instantiation time). The actual miniaudio dependency that needs
# pthread sched APIs is excluded one layer down, inside the
# llama-cpp-sys-2 fork's build.rs (mtmd C++ gate covers WasmEmscripten).
# Flipping this to `default-features = false` would also drop mtmd on native
# builds via this crate's rlib, which we don't want.
nobodywho = { path = "../core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["sync"] }
tracing = "0.1.41"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  # For `runInWorker` — message dispatch implemented in Rust instead of in
  # a separate JS dispatcher. Sets up self.onmessage / post_message from
  # inside the wasm so the worker bootstrap can be a one-line inline Blob.
  "DedicatedWorkerGlobalScope",
  "MessageEvent",
  "ErrorEvent",
  # For `Chat` (worker-backed) — Rust spawns the Web Worker from an inline
  # Blob URL, posts the load-model/create-chat/ask protocol, routes replies
  # via Closure-wrapped onmessage.
  "Worker",
  "WorkerOptions",
  "WorkerType",
  "WorkerGlobalScope",
  "Blob",
  "BlobPropertyBag",
  "Url",
  # For `fetchModelBytes` + `Model.preload` / `Model.clearCache` — Cache API
  # model storage and streaming fetch with progress.
  "Window",
  "Cache",
  "CacheStorage",
  "Request",
  "RequestInit",
  "Response",
  "Headers",
  "ReadableStream",
  "ReadableStreamDefaultReader",
]
