[package]
name = "nobodywho-js"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib" is necessary for wasm-pack to produce a .wasm artifact.
# "rlib" lets `cargo check`/`cargo test` work on native targets so the workspace
# stays buildable without the wasm toolchain installed.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# `mtmd` stays in the default features even on wasm32-unknown-emscripten.
# Core's mtmd code paths are cfg-gated so they compile out, but the C-side
# `mtmd_*` symbols remain wasm imports (resolved by Emscripten's runtime
# at instantiation time). Flipping this to `default-features = false`
# would also drop mtmd on native builds via this crate's rlib, which we
# don't want.
nobodywho = { path = "../core" }
# Pin wasm-bindgen to 0.2.122 — the workspace [patch.crates-io] block
# redirects this (plus js-sys/web-sys/futures) to nobodywho-ooo/wasm-bindgen
# branch wasm-emscripten-0.2.122 (upstream 0.2.122 + the Emscripten pthread
# fix). The exact `=` pin must match the wasm-bindgen-cli version that
# processes the wasm, else cli/schema versions mismatch.
wasm-bindgen = "=0.2.122"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["sync"] }
tracing = "0.1.41"
tracing-wasm = "0.2"
# Minimal features: `registry` for the layered subscriber + `reload` (always
# available) for runtime-tunable level filtering. Deliberately NOT enabling
# `env-filter` — that pulls in regex/matchers and bloats the wasm; a plain
# LevelFilter is enough for setLogLevel().
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry", "std"] }
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
  # Cache API for modelUrl streaming + fetch.
  "DedicatedWorkerGlobalScope",
  "WorkerGlobalScope",
  "Window",
  "Cache",
  "CacheStorage",
  "Headers",
  "Response",
  "ResponseInit",
  "ReadableStream",
  "ReadableStreamDefaultReader",
]
