[package]
name = "nobodywho-napi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nobodywho = { path = "../core" }
napi = { version = "3", features = ["async", "tokio_rt", "serde-json"] }
napi-derive = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["sync"] }
futures = "0.3.31"


[build-dependencies]
napi-build = "2"
