[package]
name = "nobodywhopython"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rand = "0.9.0"
nobodywho = { path = "../core" }
#pyo3-async-runtimes = { version = "0.26", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0.140"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"


[dependencies.pyo3]
version = "0.26.0"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "experimental-async"]