[package]
name = "nobodywho-python"
version = "0.6.2"
edition = "2021"

[lib]
# "cdylib" is necessary to produce a shared library for Python to import from.
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
rand = "0.9.0"
nobodywho = { path = "../core" }
pyo3-async-runtimes = { version = "0.27", features = ["attributes", "tokio-runtime"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
log = "0.4"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
futures = "0.3.31"
pyo3-introspection = "0.27.2"
pyo3-log = "0.13.2"
pythonize = "0.27.0"
nom = "8.0.0"


[dependencies.pyo3]
version = "0.27.2"
# "abi3-py38" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.8
features = ["abi3-py38", "experimental-async", "experimental-inspect"]
