[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nobodywho"
version = "0.10.0"
description = "Python bindings for nobodywho"
readme = "PYPI_DESCRIPTION.md"
requires-python = ">=3.10"
urls = {Homepage = "https://nobodywho.ooo/", Documentation = "https://docs.nobodywho.ooo/", Repository = "https://github.com/nobodywho-ooo/nobodywho"}
license = { text = "EUPL-1.2" }
keywords = ["AI", "LLM", "Large Language Models", "Inference", "Tool calling", "Local LLM", "Local Inference", 
"On-device AI", "SLM", "Edge AI","Realtime LLM", "Sustainable AI", "Inference engine", "Inference library", "Local AI"]


[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]
module-name = "nobodywho"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.3.0",
    "pytest-markdown-docs>=0.9.0",
    "pytest-stub>=1.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests", "../../docs"]
python_files = ["test_*.py", "*.md"]
pythonpath = ["."]
# Don't capture stdout/stderr so IO (prints, logs, progress bars) shows in real time
# confcutdir via addopts (not valid in ini_options) - limits conftest discovery to repo root
addopts = "-s --confcutdir=../.."
