[package]
name = "nobodywho-stt"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["tracing_backend"] }
symphonia = { version = "0.5", default-features = false, features = ["wav", "mp3", "pcm"] }
rubato = "0.16"
tracing = { version = "0.1.41", features = ["log"] }

[target.'cfg(all(not(target_os = "macos"), not(target_os = "ios"), not(target_os = "android"), any(target_arch = "x86_64", target_arch = "x86", target_arch = "aarch64")))'.dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["tracing_backend", "vulkan"] }

[target.'cfg(target_os = "macos")'.dependencies]
whisper-rs = { version = "0.16", default-features = false, features = ["tracing_backend", "metal"] }
