[package]
name = "nobodywho-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nobodywho_uniffi"

[dependencies]
nobodywho = { path = "../core" }
uniffi = { version = "0.29", features = ["cli"] }
tokio = { version = "1.43.0", features = ["sync"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
