[package]
name = "nobodywho-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "nobodywho_uniffi"

[dependencies]
nobodywho = { path = "../core" }
uniffi = { version = "0.30", features = ["cli"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43.0", features = ["sync"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
