[package]
name = "nobodywho-uniffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "nobodywho_uniffi"

[dependencies]
nobodywho = { path = "../core" }
uniffi = { version = "0.30", features = ["cli"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.43.0", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-log = "0.2"
android_logger = "0.14"
log = "0.4"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
