[package]
name = "nobodywho-wasm"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib" is necessary for wasm-pack to produce a .wasm artifact.
# "rlib" lets `cargo check`/`cargo test` work on native targets so the workspace
# stays buildable without the wasm toolchain installed.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# `default-features = false` drops the `mtmd` feature on core. mtmd (vision +
# audio multimodal support) relies on llama.cpp's `tools/mtmd` library, which
# pulls in `vendor/miniaudio` with pthread sched APIs wasi-libc doesn't ship.
# The wasm binding doesn't currently expose multimodal assets either way.
nobodywho = { path = "../core", default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["sync"] }
tracing = "0.1.41"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
