[package]
name = "nobodywho-wasm"
version = "0.1.0"
edition = "2021"

[lib]
# "cdylib" is necessary for wasm-pack to produce a .wasm artifact.
# "rlib" lets `cargo check`/`cargo test` work on native targets so the workspace
# stays buildable without the wasm toolchain installed.
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
# Default features include `mtmd` for now, so the existing
# wasm32-unknown-emscripten build (which uses Emscripten's own pthread
# emulation for miniaudio) keeps working. Once core's chat.rs and
# tokenizer.rs finish their mtmd cfg-gating, switch this to
# `default-features = false` to enable the wasm32-unknown-unknown
# build path (which can't compile miniaudio against wasi-libc).
nobodywho = { path = "../core" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.140"
serde-wasm-bindgen = "0.6"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["sync"] }
tracing = "0.1.41"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = ["console"]
