[project]
name = "evals"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "ifeval",
 "nobodywho",
 "tqdm>=4.67.3",
]

[tool.uv.sources]
ifeval = { git = "https://github.com/oKatanaaa/ifeval" }
nobodywho = { path = "../../python" }
