[project]
name = "lm-eval-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "immutabledict>=4.2.2",
    "langdetect>=1.0.9",
    "lm-eval>=0.4.10",
    # "nobodywho", # < what happens if we include this from surrounding scope (built w/ nix)
    "mlflow>=3.9.0",
    "psutil>=7.2.2",
    "torch>=2.10.0",
    "wandb>=0.24.2",
]

[tool.uv.sources]
nobodywho = { path = "../../python" }
