[package]
name = "nobodywho-flutter"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
nobodywho = { path = "../../core" }
flutter_rust_bridge = "=2.11.1"
regex = "1.11.2"
serde_json = "1.0.145"
futures = "0.3.31"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
nom = "8.0.0"

[build-dependencies]
flutter_rust_bridge_codegen = "2.11.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
