[package]
name = "nobodywho-flutter"
version = "2.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
nobodywho = { path = "../../core" }
flutter_rust_bridge = "=2.12.0"
regex = "1.11.2"
serde_json = "1.0.145"
futures = "0.3.31"
tracing-subscriber = "0.3.20"
tracing = "0.1.41"
nom = "8.0.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
tracing-log = "0.2"
log = "0.4"
tracing-android = "0.2"

[build-dependencies]
flutter_rust_bridge_codegen = "2.12.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
