[package]
name = "gbnf"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = "1"
# Only `jsonschema::meta::is_valid` is used (pure, in-memory). Defaults drag in
# the resolve-http stack (reqwest/hyper/tokio-net/mio, ~33 crates); mio won't build on wasm32.
jsonschema = { version = "0.41.0", default-features = false }

[dev-dependencies]
insta = "1.46.1"
gbnf-macro = { path = "../gbnf-macro" }
